# pyphysx

./: .gitignore  .travis.yml  CMakeLists.txt  MANIFEST.in  ReadMe.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: installation_in_conda.yml  python-app.yml  workflow.yml
cmake/: FindGcov.cmake  FindLcov.cmake
doc/: transformation.md
examples/: 01_free_fall.py  02_mesh_example.py  03_fixed_joint.py  03_joints.py  04_labels.py  04_robot_creation.py  05_load_urdf.py  05a_load_urdf_panda.py  05b_panda_cubes.py  06_gpu.py  06_gpu_visualize_results.py  06_performance.csv  07_meshcat_viewer.py  08_meshcat_viewer.py  08_offscreen_renderer.py  ReadMe.md  crane_robot.urdf  examples.md
examples/videos/: compress_gifs.sh
include/: Aggregate.h  BasePhysxPointer.h  D6Joint.h  Material.h  Physics.h  RigidActor.h  RigidDynamic.h  RigidStatic.h  Scene.h  Shape.h  transformation_utils.h
pyphysx_render/: meshcat_render.py  pyrender.py  pyrender_base.py  pyrender_offscreen_renderer.py  pyrender_trackball.py  rate.py  render_base.py  render_window.py  render_windows_interface.py  renderer.py  utils.py
pyphysx_utils/: rate.py  transformations.py  tree_robot.py  urdf_robot_parser.py
src/: pyphysx.cpp
src/pyphysx/: __init__.py
tests/: test_actor.py  test_aggregate.py  test_d6joint.py  test_material.py  test_meshcat.py  test_pyrender.py  test_rate.py  test_render_trackball.py  test_render_utils.py  test_render_window.py  test_scene.py  test_shape.py  test_transformations.py  test_tree_robot.py  test_urdf_crane.urdf  test_urdf_parser.py
tests/data/: test_urdf_cylinder.urdf  test_urdf_dae.urdf  test_urdf_dae_with_collision_geom.urdf  test_urdf_fixed_joint.urdf  test_urdf_limit_joint.urdf  test_urdf_wrong_geometry.urdf
